default tests conclusion

--- a/configuration/experiment_runs1.yml
+++ b/configuration/experiment_runs1.yml
@@ -1,129 +1,4 @@
-- dataset: covertype
-  model: resnet
-  best_params: {}
-  param_grid:
-    outer_params:
-      hyperopt_evals: 1
-      max_epochs: 1000
-      early_stopping: true
-      early_stopping_patience: 6
-      validation_fraction: 0.2
-    resnet_depth:
-    - resnet18
-    batch_size:
-    - 1024
-    optimizer_fn:
-      Adam:
-        weight_decay:
-        - 0.0
-        learning_rate:
-        - 0.001
-    scheduler_fn:
-      ReduceLROnPlateau:
-        factor:
-        - 0.1
-        patience:
-        - 5
-- dataset: covertype
-  model: s1dcnn
-  best_params: {}
-  param_grid:
-    outer_params:
-      hyperopt_evals: 1
-      max_epochs: 1
-      early_stopping: true
-      shuffle: true
-      validation_fraction: 0.15
-      early_stopping_patience: 5
-    batch_size:
-    - 1024
-    hidden_size:
-    - 4096
-    optimizer_fn:
-      Adam:
-        weight_decay:
-        - 0.0
-        learning_rate:
-        - 0.001
-    scheduler_fn:
-      ReduceLROnPlateau:
-        factor:
-        - 0.1
-        patience:
-        - 5
-- dataset: covertype
-  model: tabnet
-  best_params: {}
-  param_grid:
-    outer_params:
-      hyperopt_evals: 1
-      auto_lr_find: true
-      max_epochs: 1000
-      val_size: 0.15
-      early_stopping_patience: 5
-    batch_size:
-    - 1024
-    optimizer_fn:
-      Adam:
-        weight_decay:
-        - 0.0
-        learning_rate:
-        - 0.001
-    scheduler_fn:
-      ReduceLROnPlateau:
-        factor:
-        - 0.1
-        patience:
-        - 5
-- dataset: covertype
-  model: gate
-  best_params: {}
-  param_grid:
-    outer_params:
-      hyperopt_evals: 1
-      auto_lr_find: true
-      max_epochs: 1000
-      val_size: 0.15
-      early_stopping_patience: 5
-    batch_size:
-    - 1024
-    optimizer_fn:
-      Adam:
-        weight_decay:
-        - 0.0
-        learning_rate:
-        - 0.001
-    scheduler_fn:
-      ReduceLROnPlateau:
-        factor:
-        - 0.1
-        patience:
-        - 5
-- dataset: covertype
-  model: fttransformer
-  best_params: {}
-  param_grid:
-    outer_params:
-      hyperopt_evals: 1
-      auto_lr_find: true
-      max_epochs: 1000
-      val_size: 0.15
-      early_stopping_patience: 5
-    batch_size:
-    - 1024
-    optimizer_fn:
-      Adam:
-        weight_decay:
-        - 0.0
-        learning_rate:
-        - 0.001
-    scheduler_fn:
-      ReduceLROnPlateau:
-        factor:
-        - 0.1
-        patience:
-        - 5
-- dataset: covertype
+- dataset: creditcard
   model: categoryembedding
   best_params: {}
   param_grid:
@@ -147,110 +22,3 @@
         - 0.1
         patience:
         - 5
-- dataset: covertype
-  model: gandalf
-  best_params: {}
-  param_grid:
-    outer_params:
-      hyperopt_evals: 1
-      auto_lr_find: true
-      max_epochs: 1000
-      val_size: 0.15
-      early_stopping_patience: 5
-    batch_size:
-    - 1024
-    optimizer_fn:
-      Adam:
-        weight_decay:
-        - 0.0
-        learning_rate:
-        - 0.001
-    scheduler_fn:
-      ReduceLROnPlateau:
-        factor:
-        - 0.1
-        patience:
-        - 5
-- dataset: covertype
-  model: node
-  best_params: {}
-  param_grid:
-    outer_params:
-      hyperopt_evals: 1
-      auto_lr_find: true
-      max_epochs: 1000
-      val_size: 0.15
-      early_stopping_patience: 5
-    batch_size:
-    - 1024
-    optimizer_fn:
-      Adam:
-        weight_decay:
-        - 0.0
-        learning_rate:
-        - 0.001
-    scheduler_fn:
-      ReduceLROnPlateau:
-        factor:
-        - 0.1
-        patience:
-        - 5
-- dataset: covertype
-  model: autoint
-  best_params: {}
-  param_grid:
-    outer_params:
-      hyperopt_evals: 1
-      auto_lr_find: true
-      max_epochs: 1000
-      val_size: 0.15
-      early_stopping_patience: 5
-    batch_size:
-    - 1024
-    optimizer_fn:
-      Adam:
-        weight_decay:
-        - 0.0
-        learning_rate:
-        - 0.001
-    scheduler_fn:
-      ReduceLROnPlateau:
-        factor:
-        - 0.1
-        patience:
-        - 5
-- dataset: covertype
-  model: tabtransformer
-  best_params: {}
-  param_grid:
-    outer_params:
-      hyperopt_evals: 1
-      auto_lr_find: true
-      max_epochs: 1000
-      val_size: 0.15
-      early_stopping_patience: 5
-    batch_size:
-    - 1024
-    optimizer_fn:
-      Adam:
-        weight_decay:
-        - 0.0
-        learning_rate:
-        - 0.001
-    scheduler_fn:
-      ReduceLROnPlateau:
-        factor:
-        - 0.1
-        patience:
-        - 5
-- dataset: covertype
-  model: catboost
-  best_params: {}
-  param_grid:
-    outer_params:
-      hyperopt_evals: 1
-      validation_fraction: 0.15
-      early_stopping_rounds: 100
-      verbose: false
-    iterations:
-    - 500
