--- a/configuration/experiment_runs3.yml
+++ b/configuration/experiment_runs3.yml
@@ -1,135 +1,4 @@
-- dataset: ageconditions
-  model: xgb
-  best_params: {}
-  param_grid:
-    outer_params:
-      hyperopt_evals: 1
-      validation_fraction: 0.15
-      early_stopping_rounds: 30
-      verbose: false
-    learning_rate:
-    - 0.3
-- dataset: ageconditions
-  model: mlp
-  best_params: {}
-  param_grid:
-    outer_params:
-      hyperopt_evals: 1
-      early_stopping: true
-      cv_size: 4
-      validation_fraction: 0.15
-      n_iter_no_change: 10
-      max_iter: 1000
-    hidden_layer_sizes:
-    - - 100
-    activation:
-    - relu
-    solver:
-    - adam
-    batch_size:
-    - 128
-- dataset: ageconditions
-  model: resnet
-  best_params: {}
-  param_grid:
-    outer_params:
-      hyperopt_evals: 1
-      max_epochs: 1000
-      early_stopping: true
-      early_stopping_patience: 6
-      validation_fraction: 0.2
-    resnet_depth:
-    - resnet18
-    batch_size:
-    - 128
-    optimizer_fn:
-      Adam:
-        weight_decay:
-        - 0.0
-        learning_rate:
-        - 0.001
-    scheduler_fn:
-      ReduceLROnPlateau:
-        factor:
-        - 0.1
-        patience:
-        - 5
-- dataset: ageconditions
-  model: s1dcnn
-  best_params: {}
-  param_grid:
-    outer_params:
-      hyperopt_evals: 1
-      max_epochs: 1
-      early_stopping: true
-      shuffle: true
-      validation_fraction: 0.15
-      early_stopping_patience: 5
-    batch_size:
-    - 128
-    hidden_size:
-    - 4096
-    optimizer_fn:
-      Adam:
-        weight_decay:
-        - 0.0
-        learning_rate:
-        - 0.001
-    scheduler_fn:
-      ReduceLROnPlateau:
-        factor:
-        - 0.1
-        patience:
-        - 5
-- dataset: ageconditions
-  model: tabnet
-  best_params: {}
-  param_grid:
-    outer_params:
-      hyperopt_evals: 1
-      auto_lr_find: true
-      max_epochs: 1000
-      val_size: 0.15
-      early_stopping_patience: 5
-    batch_size:
-    - 128
-    optimizer_fn:
-      Adam:
-        weight_decay:
-        - 0.0
-        learning_rate:
-        - 0.001
-    scheduler_fn:
-      ReduceLROnPlateau:
-        factor:
-        - 0.1
-        patience:
-        - 5
-- dataset: ageconditions
-  model: gate
-  best_params: {}
-  param_grid:
-    outer_params:
-      hyperopt_evals: 1
-      auto_lr_find: true
-      max_epochs: 1000
-      val_size: 0.15
-      early_stopping_patience: 5
-    batch_size:
-    - 128
-    optimizer_fn:
-      Adam:
-        weight_decay:
-        - 0.0
-        learning_rate:
-        - 0.001
-    scheduler_fn:
-      ReduceLROnPlateau:
-        factor:
-        - 0.1
-        patience:
-        - 5
-- dataset: ageconditions
+- dataset: creditcard
   model: fttransformer
   best_params: {}
   param_grid:
@@ -140,7 +9,7 @@
       val_size: 0.15
       early_stopping_patience: 5
     batch_size:
-    - 128
+    - 1024
     optimizer_fn:
       Adam:
         weight_decay:
@@ -153,134 +22,3 @@
         - 0.1
         patience:
         - 5
-- dataset: ageconditions
-  model: categoryembedding
-  best_params: {}
-  param_grid:
-    outer_params:
-      hyperopt_evals: 1
-      auto_lr_find: true
-      max_epochs: 1000
-      val_size: 0.15
-      early_stopping_patience: 5
-    batch_size:
-    - 128
-    optimizer_fn:
-      Adam:
-        weight_decay:
-        - 0.0
-        learning_rate:
-        - 0.001
-    scheduler_fn:
-      ReduceLROnPlateau:
-        factor:
-        - 0.1
-        patience:
-        - 5
-- dataset: ageconditions
-  model: gandalf
-  best_params: {}
-  param_grid:
-    outer_params:
-      hyperopt_evals: 1
-      auto_lr_find: true
-      max_epochs: 1000
-      val_size: 0.15
-      early_stopping_patience: 5
-    batch_size:
-    - 128
-    optimizer_fn:
-      Adam:
-        weight_decay:
-        - 0.0
-        learning_rate:
-        - 0.001
-    scheduler_fn:
-      ReduceLROnPlateau:
-        factor:
-        - 0.1
-        patience:
-        - 5
-- dataset: ageconditions
-  model: node
-  best_params: {}
-  param_grid:
-    outer_params:
-      hyperopt_evals: 1
-      auto_lr_find: true
-      max_epochs: 1000
-      val_size: 0.15
-      early_stopping_patience: 5
-    batch_size:
-    - 128
-    optimizer_fn:
-      Adam:
-        weight_decay:
-        - 0.0
-        learning_rate:
-        - 0.001
-    scheduler_fn:
-      ReduceLROnPlateau:
-        factor:
-        - 0.1
-        patience:
-        - 5
-- dataset: ageconditions
-  model: autoint
-  best_params: {}
-  param_grid:
-    outer_params:
-      hyperopt_evals: 1
-      auto_lr_find: true
-      max_epochs: 1000
-      val_size: 0.15
-      early_stopping_patience: 5
-    batch_size:
-    - 128
-    optimizer_fn:
-      Adam:
-        weight_decay:
-        - 0.0
-        learning_rate:
-        - 0.001
-    scheduler_fn:
-      ReduceLROnPlateau:
-        factor:
-        - 0.1
-        patience:
-        - 5
-- dataset: ageconditions
-  model: tabtransformer
-  best_params: {}
-  param_grid:
-    outer_params:
-      hyperopt_evals: 1
-      auto_lr_find: true
-      max_epochs: 1000
-      val_size: 0.15
-      early_stopping_patience: 5
-    batch_size:
-    - 128
-    optimizer_fn:
-      Adam:
-        weight_decay:
-        - 0.0
-        learning_rate:
-        - 0.001
-    scheduler_fn:
-      ReduceLROnPlateau:
-        factor:
-        - 0.1
-        patience:
-        - 5
-- dataset: ageconditions
-  model: catboost
-  best_params: {}
-  param_grid:
-    outer_params:
-      hyperopt_evals: 1
-      validation_fraction: 0.15
-      early_stopping_rounds: 100
-      verbose: false
-    iterations:
-    - 500
