--- a/configuration/experiment_runs2.yml
+++ b/configuration/experiment_runs2.yml
@@ -1,120 +1,281 @@
-- dataset: ageconditions
-  model: catboost
+- dataset: diabetes
+  model: node
   best_params: {}
   param_grid:
     outer_params: &id001
       hyperopt_evals: 50
-      validation_fraction: 0.15
-      early_stopping_rounds: 100
-      verbose: false
-    iterations: &id002
-    - 200
-    - 2000
-    learning_rate: &id003
-    - 0.001
-    - 0.1
-    depth: &id004
-    - 4
-    - 10
-    l2_leaf_reg: &id005
-    - 0.5
-    - 5.0
-    min_child_samples: &id006
+      auto_lr_find: true
+      max_epochs: 1000
+      val_size: 0.15
+      early_stopping_patience: 5
+    batch_size: &id002
+    - 512
+    - 1024
+    num_layers: &id003
     - 1
-    - 100
-    bagging_temperature: &id007
-    - 0.1
-    - 2.0
-- dataset: breastcancer
-  model: catboost
-  best_params: {}
-  param_grid:
-    outer_params: *id001
-    iterations: *id002
-    learning_rate: *id003
-    depth: *id004
-    l2_leaf_reg: *id005
-    min_child_samples: *id006
-    bagging_temperature: *id007
-- dataset: iris
-  model: catboost
-  best_params: {}
-  param_grid:
-    outer_params: *id001
-    iterations: *id002
-    learning_rate: *id003
-    depth: *id004
-    l2_leaf_reg: *id005
-    min_child_samples: *id006
-    bagging_temperature: *id007
-- dataset: titanic
-  model: catboost
-  best_params: {}
-  param_grid:
-    outer_params: *id001
-    iterations: *id002
-    learning_rate: *id003
-    depth: *id004
-    l2_leaf_reg: *id005
-    min_child_samples: *id006
-    bagging_temperature: *id007
-- dataset: adult
-  model: catboost
-  best_params: {}
-  param_grid:
-    outer_params: &id008
-      hyperopt_evals: 50
-      validation_fraction: 0.15
-      early_stopping_rounds: 100
-      verbose: false
-    iterations: &id009
-    - 200
-    - 1500
-    learning_rate: &id010
-    - 0.001
-    - 0.1
-    depth: &id011
+    - 2
+    - 3
+    num_trees: &id004
+    - 12
+    - 128
+    additional_tree_output_dim: &id005
+    - 2
+    - 3
     - 4
-    - 10
-    l2_leaf_reg: &id012
-    - 0.5
-    - 5.0
-    min_child_samples: &id013
-    - 1
-    - 100
-    bagging_temperature: &id014
+    depth: &id006
+    - 5
+    - 7
+    choice_function: &id007
+    - entmax15
+    - sparsemax
+    bin_function: &id008
+    - entmoid15
+    - sparsemoid
+    input_dropout: &id009
+    - 0.0
     - 0.1
-    - 2.0
-- dataset: heloc
-  model: catboost
-  best_params: {}
-  param_grid:
-    outer_params: *id008
-    iterations: *id009
-    learning_rate: *id010
-    depth: *id011
-    l2_leaf_reg: *id012
-    min_child_samples: *id013
-    bagging_temperature: *id014
-- dataset: diabetes
-  model: catboost
-  best_params: {}
-  param_grid:
-    outer_params: *id008
-    iterations: *id009
-    learning_rate: *id010
-    depth: *id011
-    l2_leaf_reg: *id012
-    min_child_samples: *id013
-    bagging_temperature: *id014
+    embedding_dropout: &id010
+    - 0.0
+    - 0.1
+    embed_categorical: &id011
+    - true
+    - false
+    optimizer_fn: &id012
+      Adam:
+        weight_decay:
+        - 0.0001
+        - 1.0e-05
+      AdamW:
+        weight_decay:
+        - 0.0001
+        - 1.0e-05
+    scheduler_fn: &id013
+      ReduceLROnPlateau:
+        factor:
+        - 0.1
+        - 0.9
+        patience:
+        - 3
+        - 5
+      ExponentialLR:
+        gamma:
+        - 0.9
+        - 0.99
 - dataset: covertype
-  model: catboost
+  model: node
   best_params: {}
   param_grid:
-    outer_params: *id008
-    iterations: *id009
-    learning_rate: *id010
-    depth: *id011
-    l2_leaf_reg: *id012
-    min_child_samples: *id013
-    bagging_temperature: *id014
+    outer_params: *id001
+    batch_size: *id002
+    num_layers: *id003
+    num_trees: *id004
+    additional_tree_output_dim: *id005
+    depth: *id006
+    choice_function: *id007
+    bin_function: *id008
+    input_dropout: *id009
+    embedding_dropout: *id010
+    embed_categorical: *id011
+    optimizer_fn: *id012
+    scheduler_fn: *id013
+- dataset: adult
+  model: node
+  best_params: {}
+  param_grid:
+    outer_params: *id001
+    batch_size: *id002
+    num_layers: *id003
+    num_trees: *id004
+    additional_tree_output_dim: *id005
+    depth: *id006
+    choice_function: *id007
+    bin_function: *id008
+    input_dropout: *id009
+    embedding_dropout: *id010
+    embed_categorical: *id011
+    optimizer_fn: *id012
+    scheduler_fn: *id013
+- dataset: ageconditions
+  model: node
+  best_params: {}
+  param_grid:
+    outer_params: &id014
+      hyperopt_evals: 50
+      auto_lr_find: true
+      max_epochs: 1000
+      val_size: 0.15
+      early_stopping_patience: 5
+    batch_size: &id015
+    - 32
+    - 64
+    - 128
+    - 256
+    num_layers: &id016
+    - 1
+    - 2
+    - 3
+    num_trees: &id017
+    - 12
+    - 128
+    additional_tree_output_dim: &id018
+    - 2
+    - 3
+    - 4
+    depth: &id019
+    - 5
+    - 7
+    choice_function: &id020
+    - entmax15
+    - sparsemax
+    bin_function: &id021
+    - entmoid15
+    - sparsemoid
+    input_dropout: &id022
+    - 0.0
+    - 0.1
+    embedding_dropout: &id023
+    - 0.0
+    - 0.1
+    embed_categorical: &id024
+    - true
+    - false
+    optimizer_fn: &id025
+      Adam:
+        weight_decay:
+        - 0.0001
+        - 1.0e-05
+      AdamW:
+        weight_decay:
+        - 0.0001
+        - 1.0e-05
+    scheduler_fn: &id026
+      ReduceLROnPlateau:
+        factor:
+        - 0.1
+        - 0.9
+        patience:
+        - 3
+        - 5
+      ExponentialLR:
+        gamma:
+        - 0.9
+        - 0.99
+- dataset: breastcancer
+  model: node
+  best_params: {}
+  param_grid:
+    outer_params: *id014
+    batch_size: *id015
+    num_layers: *id016
+    num_trees: *id017
+    additional_tree_output_dim: *id018
+    depth: *id019
+    choice_function: *id020
+    bin_function: *id021
+    input_dropout: *id022
+    embedding_dropout: *id023
+    embed_categorical: *id024
+    optimizer_fn: *id025
+    scheduler_fn: *id026
+- dataset: iris
+  model: node
+  best_params: {}
+  param_grid:
+    outer_params: *id014
+    batch_size: *id015
+    num_layers: *id016
+    num_trees: *id017
+    additional_tree_output_dim: *id018
+    depth: *id019
+    choice_function: *id020
+    bin_function: *id021
+    input_dropout: *id022
+    embedding_dropout: *id023
+    embed_categorical: *id024
+    optimizer_fn: *id025
+    scheduler_fn: *id026
+- dataset: titanic
+  model: node
+  best_params: {}
+  param_grid:
+    outer_params: *id014
+    batch_size: *id015
+    num_layers: *id016
+    num_trees: *id017
+    additional_tree_output_dim: *id018
+    depth: *id019
+    choice_function: *id020
+    bin_function: *id021
+    input_dropout: *id022
+    embedding_dropout: *id023
+    embed_categorical: *id024
+    optimizer_fn: *id025
+    scheduler_fn: *id026
+- dataset: adult
+  model: node
+  best_params: {}
+  param_grid:
+    outer_params: *id001
+    batch_size: *id002
+    num_layers: *id003
+    num_trees: *id004
+    additional_tree_output_dim: *id005
+    depth: *id006
+    choice_function: *id007
+    bin_function: *id008
+    input_dropout: *id009
+    embedding_dropout: *id010
+    embed_categorical: *id011
+    optimizer_fn: *id012
+    scheduler_fn: *id013
+- dataset: heloc
+  model: node
+  best_params: {}
+  param_grid:
+    outer_params: *id001
+    batch_size: *id002
+    num_layers: *id003
+    num_trees: *id004
+    additional_tree_output_dim: *id005
+    depth: *id006
+    choice_function: *id007
+    bin_function: *id008
+    input_dropout: *id009
+    embedding_dropout: *id010
+    embed_categorical: *id011
+    optimizer_fn: *id012
+    scheduler_fn: *id013
+- dataset: diabetes
+  model: node
+  best_params: {}
+  param_grid:
+    outer_params: *id001
+    batch_size: *id002
+    num_layers: *id003
+    num_trees: *id004
+    additional_tree_output_dim: *id005
+    depth: *id006
+    choice_function: *id007
+    bin_function: *id008
+    input_dropout: *id009
+    embedding_dropout: *id010
+    embed_categorical: *id011
+    optimizer_fn: *id012
+    scheduler_fn: *id013
+- dataset: covertype
+  model: node
+  best_params: {}
+  param_grid:
+    outer_params: *id001
+    batch_size: *id002
+    num_layers: *id003
+    num_trees: *id004
+    additional_tree_output_dim: *id005
+    depth: *id006
+    choice_function: *id007
+    bin_function: *id008
+    input_dropout: *id009
+    embedding_dropout: *id010
+    embed_categorical: *id011
+    optimizer_fn: *id012
+    scheduler_fn: *id013
